--- a/public/pannello.html
+++ b/public/pannello.html
@@ -8,37 +8,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./css/style.css">
     <script src="/socket.io/socket.io.js"></script>
-  </head>
-  <body>
-    <h1>Pannello di controllo</h1>
-    <form id="configForm" action="/update-config-data" method="post">
-      <span>Temperatura di attivazione:  </span><input id="temperatura" type="number" name="onTemperature" value="<%= onTemperature %>" />
-      <input type="submit" value="Applica cambiamenti" />
-    </form>
-
     <script>
       // Connect to the WebSocket server
-      const socket = io();
+      const socket = io('http://localhost:8080/pannello');
 
-      // Handle the initial panel data
-      socket.on("panelData", (data) => {
-        console.log(data); // Log the received panel data
-        // Update your UI with the received panel data
-        // ...
-        document.getElementById("temperatura").value=data.onTemperature;
-      });
+      function loadData() {
+        // Handle the initial panel data
+        socket.on("panelData", (data) => {
+          console.log(data); // Log the received panel data
+          // Update your UI with the received panel data
+          // ...
+          document.getElementById("temperatura").value=data.onTemperature;
+          document.getElementById("frequenza").value=data.sensorUpdateFrequency;
+        });
 
-      // Handle the form submission
-      document.getElementById("configForm").addEventListener("submit", (event) => {
-        event.preventDefault();
+        // Handle the form submission
+        document.getElementById("configForm").addEventListener("submit", (event) => {
+          event.preventDefault();
 
-        // Get the form data
-        const formData = new FormData(event.target);
-        const data = Object.fromEntries(formData.entries());
+          // Get the form data
+          const formData = new FormData(event.target);
+          const data = Object.fromEntries(formData.entries());
 
-        // Send the updated panel data to the server
-        socket.emit("updateConfigData", data);
-      });
+          // Send the updated panel data to the server
+          socket.emit("updateConfigData", data);
+        });
+      }
     </script>
+  </head>
+  <body onload="loadData()">
+    <h1>Pannello di controllo</h1>
+    <form id="configForm" method="post">
+      <span>Temperatura di attivazione:  </span><input id="temperatura" type="number" name="onTemperature"/> <br>
+      <span>Frequenza di aggiornamento dati: </span><input type="number" id="frequenza" name="sensorUpdateFrequency"> <br>
+      <input type="submit" value="Applica cambiamenti" />
+      
+    </form>
+
+    
   </body>
 </html>
